--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,72 @@
 @import "tailwindcss";
+
+.text-primary {
+    @apply bg-clip-text text-transparent bg-gradient-to-r from-white to-blue-200 font-bold drop-shadow-[0_0_6px_theme(colors.blue.500)];
+}
+
+.text-primary {
+    text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.964), -1px -1px 2px rgba(0, 0, 0, 0.23);
+}
+
+.text-secondary {
+    @apply font-bold text-transparent bg-clip-text bg-gradient-to-r from-blue-200 to-blue-300 z-10
+}
+
+.text-tertiary {
+    @apply font-extrabold text-white;
+}
+
+.text-subhead {
+    @apply text-white text-lg italic;
+}
+
+.para {
+    @apply lg:text-lg text-gray-100 text-center;
+}
+
+.btn-primary {
+    @apply bg-blue-400 rounded-md font-semibold hover:bg-blue-500 cursor-pointer z-20 active:border-[2.5px] active:border-blue-300 outline-none;
+}
+
+.btn-secondary {
+    @apply bg-transparent border-2 border-white text-white hover:bg-white hover:text-gray-900 py-3 px-8 active:bg-white/90 focus:ring focus:ring-white/30 rounded-lg font-semibold text-lg cursor-pointer;
+}
+
+.btn-submit {
+    @apply bg-blue-600 text-white hover:bg-blue-700 active:bg-blue-800 focus:ring-2 focus:ring-blue-400 py-1.5 px-10 text-lg font-semibold rounded-xl cursor-pointer;
+}
+
+.input-primary {
+    @apply rounded-lg py-1.5 px-3 bg-transparent border-2 outline-none text-gray-200 placeholder:text-gray-500
+}
+
+.glassmorphic {
+    @apply bg-white/5 backdrop-blur-lg shadow-md border border-white/15
+}
+
+.glassmorphic-2 {
+    @apply bg-black/5 backdrop-blur-lg border border-white/40 active:ring-2 active:ring-blue-400
+}
+
+
+
+::-webkit-scrollbar {
+    width: 10.2px;
+}
+
+::-webkit-scrollbar-track {
+    background: rgba(201, 199, 199, 0.778); /* Dark frosted-glass effect */
+    backdrop-filter: blur(6px);
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgba(58, 58, 58, 0.4);
+    border-radius: 6px;
+    border: 1px solid rgba(41, 40, 40, 0.1);
+    box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.1), 0 0 4px rgba(0, 0, 0, 0.5);
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: rgba(28, 28, 28, 0.5);
+    box-shadow: inset 0 0 8px rgba(255, 255, 255, 0.15), 0 0 6px rgba(0, 0, 0, 0.6);
+}
