--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -41,11 +41,11 @@
 }
 
 .glassmorphic {
-    @apply bg-white/5 backdrop-blur-lg shadow-md border border-white/15
+    @apply bg-white/5 backdrop-blur-2xl shadow-md border border-white/15
 }
 
 .glassmorphic-2 {
-    @apply bg-black/5 backdrop-blur-lg border border-white/40 active:ring-2 active:ring-blue-400
+    @apply bg-white/5 backdrop-blur-lg border-2 border-white/40 active:ring-2 active:ring-blue-400
 }
 
 
